# RayTracingOneWeekend

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  READ.ME
include/: camera.h  colorUtilities.h  dielectric.h  hitpoint.h  hittable.h  hittableObjectsList.h  interval.h  lambertian.h  material.h  metal.h  ray.h  sphere.h  utilityFunctions.h  vec3.h  vec3utilities.h
src/: camera.cpp  colorUtilities.cpp  dielectric.cpp  hitpoint.cpp  hitpoint.h  hittable.h  hittableObjectsList.cpp  hittableObjectsList.h  interval.cpp  lambertian.cpp  main.cpp  material.cpp  metal.cpp  ray.cpp  ray.h  sphere.cpp  sphere.h  utilityFunctions.h  vec3.cpp  vec3.h  vec3utilities.h
